--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=swimminglessons
 
+#In Memory
+#spring.datasource.url=jdbc:h2:mem:testdb
 
-
-#spring.datasource.url=jdbc:h2:file:./data/testdb
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/swimmingdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#Keep show SQL in logs
+spring.jpa.show-sql=true
